Kubernetes-Deployment/WebAPI-Require-Private-Registry/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giraf-webapi-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: giraf-webapi
